move summary to same line as artist photo

--- a/app/views/artist.html.haml
+++ b/app/views/artist.html.haml
@@ -1,17 +1,17 @@
 .row
-  .col-xs-12
-    .albums
-      %a.item{href: "#{url_for("/artist/#{artist.id}")}"}
-        %img.artist{title: "#{artist.name}", src: "#{url_for "/images/artists/#{artist.image_path}"}"}
-      -artist.albums.each do |album|
-        %a.item{href: "#{url_for("/album/#{album.id}")}"}
-          %img.artist{title: "#{album.title}", src: "#{url_for("/images/albums/#{album.image_path}")}"}
+  .col-xs-3.col-md-2
+    %a.item{href: "#{url_for("/artist/#{artist.id}")}"}
+      %img.artist{title: "#{artist.name}", src: "#{url_for "/images/artists/#{artist.image_path}"}"}
+  .col-xs-8.col-md-6#summary
+.row.sp-top-sm
+  .col-xs-12.albums
+    -artist.albums.each do |album|
+      %a.item{href: "#{url_for("/album/#{album.id}")}"}
+        %img.artist{title: "#{album.title}", src: "#{url_for("/images/albums/#{album.image_path}")}"}
 
 .edit
   %a.item{href: "#{url_for("/admin/artist/#{artist.id}")}"}
     Edit
-.row
-  .col-xs-12.col-md-offset-2.col-md-7.sp-top-sm#summary
 :javascript
   keypress_enable=false;
   $(document).attr("title", "#{artist.name}");
