--- a/app/views/index.html.haml
+++ b/app/views/index.html.haml
@@ -1,6 +1,5 @@
 -artists.to_a.select{|artist| artist.albums.size > 0}.each do |artist|
-  %a.item{href: "#{url_for "/artist/#{artist.id}"}"}
-    %img.artist{src: "#{url_for "/images/artists/sm/#{artist.image_path}"}", title: "#{artist.name}"}
+  =haml :"partials/artist", locals: {artist: artist}
 :javascript
   var container = document.querySelector('.container');
   var msnry = new Masonry( container, {
