--- a/app/views/admin/album.html.haml
+++ b/app/views/admin/album.html.haml
@@ -26,13 +26,17 @@
 .row.sp-top-sm.no-pad
   -model.tags.each do |tag|
     %form{class: "tagform#{tag.id}"}
-      %input.form-control{type:"text", name:"name", value: "#{tag.name}", onFocus: "this.dirty=false", onChange: "this.dirty = true", onBlur: "if(this.dirty) {update_tag(#{tag.id})}"} 
-      %input.btn.btn-warning{type: 'button', onClick:"if(confirm('remove tag?')) { remove_tag(#{model.id}, #{tag.id})}", value: "X"}
-  %form.form{id: "newtag"}
-    .form-group
-      %input.form-control#tag{type: "text", name: "tag", placeholder: "Add Tag"}
-      .submit
-        %input.btn.btn-default.btn-lg{type:"Submit", value:"Add Tag", onClick: "add_tag(#{model.id})"}
+      .input-group.input-group-lg
+        %input.form-control{type:"text", name:"name", value: "#{tag.name}"} 
+      .input-group.input-group-lg
+        %input.btn.btn-warning{type: 'button', onClick:"if(confirm('remove tag?')) { remove_tag(#{model.id}, #{tag.id})}", value: "X"}
+.row
+  .col-xs-12
+    %form.form{id: "newtag"}
+      .form-group
+        %input.form-control{id: "tag", type: "text", name: "tag", placeholder: "Add Tag"}
+        .submit
+          %input.btn.btn-default.btn-md{type:"Submit", value:"Add Tag", onClick: "add_tag(#{model.id})"}
     
 .row.sp-top-sm.no-pad
   .col-md-1
