remove unused parameter from add_tag javascript function

--- a/app/views/admin/album.html.haml
+++ b/app/views/admin/album.html.haml
@@ -75,7 +75,7 @@
     return del(url);
   }
 
-  function add_tag(album_id, tag_id) {
+  function add_tag(album_id) {
     var url = "#{url_for('/album/')}" + album_id + '/tags'; 
     var form= $("#newtag");
     return put(form, url);
