--- a/app/views/album.html.haml
+++ b/app/views/album.html.haml
@@ -12,6 +12,7 @@
     //document.getElementById("content").style.minHeight="900px";
 
     var myPlaylist;
+    var summary_available=true;
     $(document).ready(function() {
       document.title = "#{album.title}";
       myPlaylist = new jPlayerPlaylist({
@@ -65,6 +66,7 @@
           $('#summary').append(data.summary);
         })
       .fail(function(data) {
+        summary_available=false;
         $('#summary').fadeOut();
         });
     }
