retrun wikipedia links + better error handling for missing summaries

--- a/app/views/artist.html.haml
+++ b/app/views/artist.html.haml
@@ -37,7 +37,8 @@
   function get_summary(id) {
     $.getJSON("#{url_for("/artist/#{artist.id}/summary")}")
     .done(function(data) {
-        $('#summary').append(data.summary);
+        $('#summary').append("<div class='summary'><p class='text'>" + data.summary + "</p>");
+        $('#summary').append("<div class='links'><a target='_' href='" + data.url + "'>wikipedia</a></div></div>");
         summary_loaded = true;
         masonrize();
       })
