--- a/app/views/admin/playlist.html.haml
+++ b/app/views/admin/playlist.html.haml
@@ -26,11 +26,17 @@
     %input.btn.btn-default.btn-lg{type:"Submit", value:"Submit"}
 .tracks
   -model.playlist_tracks.each do |playlist_track|
-    .input-group.input-group-lg
-      %span.input-group-addon
-        &nbsp;
-      %span.form-control
-        #{playlist_track.track.title unless playlist_track.nil? || playlist_track.track.nil?}
+    %form{class: "playlist_trackform#{playlist_track.id}"}
+      .row.no-pad
+        .col-md-3
+          %span
+            #{playlist_track.track.title unless playlist_track.nil? || playlist_track.track.nil?}
+        .col-md-1
+          %input.col-md-4.form-control{type: 'text', name: 'order', value: "#{playlist_track.order}" , onFocus: "this.dirty=false", onChange: "this.dirty = true", onBlur: "if(this.dirty) {save_playlist_track(#{playlist_track.id})}"}
+        .col-md-1
+          %input.btn.btn-warning{type: 'button', onClick:"if(confirm('delete track?')) {delete_track(#{playlist_track.id})}", value: "delete"}
+
+        
 :javascript
   keypress_enable=false
   $('#track').autocomplete({
@@ -40,3 +46,33 @@
     lookupLimit: 50,
     autoSelectFirst: true,
   });
+
+  function delete_track(id) {
+    var url = "#{url_for('/playlist_track/')}" + id;
+    $('.playlist_trackform' + id).remove();
+    return del(url);
+  }
+
+  function save_playlist_track(id) {
+    var form= $(".playlist_trackform" + id);
+    var url = "#{url_for('/playlist_track/')}" + id; 
+    return post(form, url);
+  }
+
+  function post(form, url) {
+    $.ajax( {
+        url: url,
+        data: form.serialize(), 
+        method: 'post',
+    })
+    .done(function(msg) {
+    });
+  }
+
+  function del(url) {
+    $.ajax({
+      url: url,
+      method: 'delete'
+    });
+  }
+
