--- a/app/views/album.html.haml
+++ b/app/views/album.html.haml
@@ -57,18 +57,7 @@
         <a href='#{url_for("/album/#{album.id}")}' title='#{album.title}'>      \
           <span class='album-title'>#{shorten album.title, 20}</span> \
         </a>");
-      get_summary(#{album.id});
+      get_summary("#{url_for("/album/#{album.id}/summary")}");
     });
 
-    function get_summary(id) {
-      $.getJSON("#{url_for("/album/#{album.id}/summary")}")
-      .done(function(data) {
-          $('#summary').append("<div class='summary'><p class='text'>" + data.summary + "</p>");
-          $('#summary').append("<div class='links'><a target='_' href='" + data.url + "'>wikipedia</a></div></div>");
-        })
-      .fail(function(data) {
-        summary_available=false;
-        $('#summary').fadeOut();
-        });
-    }
 
