--- a/app/views/partials/artist.html.haml
+++ b/app/views/partials/artist.html.haml
@@ -1,2 +1,3 @@
-%a.item{href: "#{url_for "/artist/#{artist.id}"}"}
+-url = admin == true ? "/admin/artist/#{artist.id}" : "/artist/#{artist.id}"
+%a.item{href: "#{url_for url}"}
   %img.artist{title: "#{artist.name}", src: "#{url_for "/images/artists/sm/#{artist.image_path}"}"}
