--- a/app/views/search.html.haml
+++ b/app/views/search.html.haml
@@ -1,7 +1,7 @@
 %h3
   Artists
 -artists.to_a.select{|artist| artist.albums.size > 0}.each do |artist|
-  =haml :"partials/artist", locals: {artist: artist}
+  =haml :"partials/artist", locals: {artist: artist, admin: false}
 %h3
   Albums
 -albums.to_a.select{|album| album.tracks.size > 0}.each do |album|
