--- a/app/views/search.html.haml
+++ b/app/views/search.html.haml
@@ -5,8 +5,7 @@
 %h3
   Albums
 -albums.to_a.select{|album| album.tracks.size > 0}.each do |album|
-  %a.item{href: "#{url_for "/album/#{album.id}"}"}
-    %img.album{title: "#{album.title}", src: "#{url_for "/images/albums/#{album.image_path}"}"}
+  =haml :"partials/album", locals: {album: album}
 :javascript
   var $container = $('#container');
   // init
