change to container-fluid

--- a/app/views/layout.html.haml
+++ b/app/views/layout.html.haml
@@ -38,7 +38,7 @@
         %ul.nav.navbar-brand
           %li
             %span.navbar-info
-    .container#content
+    .container-fluid#content
       =yield
     %div.sp-bottom-sm.row#footer
       %div.container.footer
