--- a/app/views/playlists.html.haml
+++ b/app/views/playlists.html.haml
@@ -12,7 +12,7 @@
     %input.btn.btn-default.btn-lg{type:"Submit", value:"Submit"}
   
 :javascript
-  var container = document.querySelector('.container');
+  var container = document.querySelector('#content');
   var msnry = new Masonry( container, {
     // options
     columnWidth: 200,
