--- a/app/views/index.html.haml
+++ b/app/views/index.html.haml
@@ -1,7 +1,7 @@
 -artists.to_a.select{|artist| artist.albums.size > 0}.each do |artist|
   =haml :"partials/artist", locals: {artist: artist, admin: false}
 :javascript
-  var container = document.querySelector('.container');
+  var container = document.querySelector('#content')
   var msnry = new Masonry( container, {
     // options
     columnWidth: 200,
