album to body background

--- a/app/views/layout.html.haml
+++ b/app/views/layout.html.haml
@@ -20,7 +20,7 @@
     %script
       //default is to enable keypress functions unless page opts out
       var keypress_enable=true;
-  %body
+  %body#image
     %nav.navbar.navbar-default#nav{role: "navigation"}
       .navbar-header
         %button.navbar-toggle{type:"button", data:{toggle: "collapse", target: "#navbar-collapse"}}
