--- a/app/views/album.html.haml
+++ b/app/views/album.html.haml
@@ -6,7 +6,7 @@
 
 :javascript
     document.getElementById("image").style.background="url('#{url_for "/images/albums/" + (album.image || "")}')";
-    document.getElementById("image").style.backgroundPosition="0px 0px";
+    document.getElementById("image").style.backgroundPosition="center";
     document.getElementById("image").style.backgroundSize="contain";
     document.getElementById("image").style.backgroundRepeat="no-repeat";
     //document.getElementById("content").style.minHeight="900px";
