--- a/app/views/layout.html.haml
+++ b/app/views/layout.html.haml
@@ -17,6 +17,7 @@
     %script{type: "text/javascript", src: "#{url_for "/libs/masonry/dist/masonry.pkgd.js"}"}
     %script{type: "text/javascript", src: "#{url_for "/libs/imagesloaded/imagesloaded.pkgd.min.js"}"}
     %script{type: "text/javascript", src: "#{url_for "/libs/devbridge-autocomplete/dist/jquery.autocomplete.min.js"}"}
+    %script{type: "text/javascript", src: "#{url_for "/libs/d3/d3.min.js"}"}
     %script
       //default is to enable keypress functions unless page opts out
       var keypress_enable=true;
