--- a/app/views/album.html.haml
+++ b/app/views/album.html.haml
@@ -3,6 +3,8 @@
     =haml :"partials/player", locals: { admin_url: "#{url_for("/admin/album/#{album.id}")}" }
 .row
   .col-xs-12.col-md-offset-2.col-md-7.sp-top-sm#summary
+  .col-xs-12.col-md-offset-3.col-md-9.sp-top-sm#player
+    =haml :"partials/visualizer"
 
 :javascript
     document.getElementById("image").style.background="url('#{url_for "/images/albums/" + (album.image || "")}')";
