--- a/public/css/default.css
+++ b/public/css/default.css
@@ -70,6 +70,10 @@ body {
   margin-top: 2em;
 }
 
+.sp-top-xl {
+  margin-top: 6em;
+}
+
 .sp-bottom-sm {
   margin-bottom: 2em;
 }
@@ -96,3 +100,8 @@ canvas {
               0 3px 4px rgba(0,0,0,0.7);
 }
 
+.vcenter {
+  display: inline-block;
+  vertical-align: middle;
+  float: none;
+}
