--- a/app/views/album.html.haml
+++ b/app/views/album.html.haml
@@ -1,8 +1,9 @@
 .row
+  .col-xs-12.col-md-offset-2.col-sm-6.col-lg-4.sp-top-sm
+    =haml :"partials/visualizer"
+.row
   .col-xs-12.col-md-offset-2.col-sm-6.col-lg-4.sp-top-sm#player
     =haml :"partials/player", locals: { admin_url: "#{url_for("/admin/album/#{album.id}")}" }
-  .col-xs-12.col-sm-3.sp-top-xl
-    =haml :"partials/visualizer"
 .row
   .col-xs-12.col-md-offset-2.col-md-7.sp-top-sm#summary
 
