--- a/app/views/partials/visualizer.html.haml
+++ b/app/views/partials/visualizer.html.haml
@@ -1,7 +1,7 @@
 %row
   .col-xs-12
     #visualization
-      .item
+      .item-x3
         %canvas.visualizer
       .item
         %input#refresh{type:"TEXT", value: "10"}
