--- a/public/css/default.css
+++ b/public/css/default.css
@@ -93,8 +93,11 @@ body {
 }
 
 canvas {
+  width: 420px;
+  height: 260px;
   border-top: 1px solid black;
   border-bottom: 1px solid black;
+  margin-left: -15px;
   margin-bottom: -3px;
   box-shadow: 0 -2px 4px rgba(0,0,0,0.7),
               0 3px 4px rgba(0,0,0,0.7);
