--- a/app/views/tracks.html.haml
+++ b/app/views/tracks.html.haml
@@ -24,8 +24,11 @@
                   %a{href: "#{url_for("/album/#{track.album.id}")}"}
                     #{track.album.title} (#{track.album.id})
     -unless tracks.empty?
-      .col-xs-6
-        =haml :"partials/player", locals: { admin_url: nil }
+      .row
+        .col-xs-6
+          =haml :"partials/player", locals: { admin_url: nil }
+          .sp-top-sm
+            =haml :"partials/visualizer"
 :javascript
   $('#search').prop('action', "#{url_for('/tracks')}");
   $('.navbar-info').html("#{tracks.count} tracks");
